# tree-sitter-nonmem

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-nonmem.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_nonmem/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNonmem/: nonmem.h
bindings/swift/TreeSitterNonmemTests/: TreeSitterNonmemTests.swift
examples/: advan_variants.ctl  advanced_estimation.ctl  all_record_types.ctl  compact_syntax.ctl  complex_omega.ctl  edge_cases.ctl  mixture_model.ctl  multiline_records.ctl  nested_control_flow.ctl  ode_model.ctl  one_compartment.ctl  simulation.ctl  special_operators.ctl  tricky_identifiers.ctl  two_compartment.ctl  verbatim_fortran.ctl
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comments.txt  comparisons.txt  control_flow.txt  data.txt  estimation.txt  expressions.txt  parameters.txt  records.txt  references.txt  scanner.txt
